--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,9 +73,9 @@ x-airflow-common:
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
-    - ./dags:/opt/airflow/dags
-    - ./logs:/opt/airflow/logs
-    - ./plugins::/opt/airflow/plugins
+    - ./dags:/opt/airflow/dags:rw
+    - ./logs:/opt/airflow/logs:rw
+    - ./plugins::/opt/airflow/plugins:rw
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
