--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ x-airflow-common:
   volumes:
     - ./dags:/opt/airflow/dags:rw
     - ./logs:/opt/airflow/logs:rw
-    - ./plugins::/opt/airflow/plugins:rw
+    - ./plugins:/opt/airflow/plugins:rw
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
