--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ x-airflow-common:
     - ./dags:/opt/airflow/dags:rw
     - ./logs:/opt/airflow/logs:rw
     - ./plugins:/opt/airflow/plugins:rw
+    - ./configs:/opt/airflow/configs:rw
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
