--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,10 +73,10 @@ x-airflow-common:
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
-    - ./dags:/opt/airflow/dags:rw
-    - ./logs:/opt/airflow/logs:rw
-    - ./plugins:/opt/airflow/plugins:rw
-    - ./configs:/opt/airflow/configs:rw
+    - ./dags:/home/alee/Airflow/dags:rw
+    - ./logs:/home/alee/Airflow/logs:rw
+    - ./plugins:/home/alee/Airflow/plugins:rw
+    - ./configs:/home/alee/Airflow/configs:rw
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
