--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -295,5 +295,27 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
+  flask_app:
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - '5001:5001'
+    depends_on:
+      - postgres
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+
+  vocab_postgres:
+    image: postgres:13
+    restart: always
+    ports:
+      - '5432:5432'
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=vocab2023!
+      - POSTGRES_DB=199.241.139.206
+
 volumes:
   postgres-db-volume:
