--- a/vocab_streamlit_app/requirements.txt
+++ b/vocab_streamlit_app/requirements.txt
@@ -1,8 +1,10 @@
-numpy==1.23.5
 pandas==1.5.3
+python-dotenv==1.0.0
 plotly==5.14.1
 requests==2.30.0
 slackclient==2.9.4
 SQLAlchemy==1.4.47
 streamlit==1.23.1
 psycopg2-binary
+streamlit-aggrid
+beautifulsoup4==4.12.2
