chore: optimize codes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -317,15 +317,15 @@ services:
       - POSTGRES_PASSWORD=vocab2023!
       - POSTGRES_DB=199.241.139.206
 
-  # Streamlit App
-  streamlit_app:
-    container_name: vocab_streamlit_app
-    build: ./vocab_streamlit_app
-    ports:
-      - '8502:8502'
-    volumes:
-      - ./vocab_streamlit_app:/home/src/
-    restart: on-failure
+  # # Streamlit App
+  # streamlit_app:
+  #   container_name: vocab_streamlit_app
+  #   build: ./vocab_streamlit_app
+  #   ports:
+  #     - '8502:8502'
+  #   volumes:
+  #     - ./vocab_streamlit_app:/home/src/
+  #   restart: on-failure
 
 
 volumes:
