chore: increase the gunicorn timeout

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,8 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
+    environment:
+      GUNICORN_TIMEOUT: "240"
     command: webserver
     ports:
       - "8080:8080"
