chore: define db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,7 @@ services:
     <<: *airflow-common
     environment:
       GUNICORN_TIMEOUT: "240"
+      <<: *airflow-common-env
     command: webserver
     ports:
       - "8080:8080"
